@@ -9,13 +9,8 @@ def main(hub, args):
         password = py.std.getpass.getpass("password for user %s: " % user)
     input = dict(user=user, password=password)
     r = hub.http_api("post", hub.current.login, input, quiet=False)
-    # devpi-server 1.1 sends a proper result structure, normalize:
-    try:
-        data = r["result"]
-    except KeyError:
-        data = r
-    hub.current.set_auth(user, data["password"])
-    hours = data["expiration"] / (60*60.0)
+    hub.current.set_auth(user, r.result["password"])
+    hours = r.result["expiration"] / (60*60.0)
     hub.info("logged in %r, credentials valid for %.2f hours" %
              (user, hours))
     #else:
