@@ -471,18 +471,22 @@ def getjson(parser):
 def list_(parser):
     """ list project versions and files for the current index.
 
-    Without a ``spec`` argument this command will show the names
-    of all projects that have been used.  With a spec argument
-    it will show all release files.  RED files come from an
-    an inherited version which is shadowed by an inheriting index.
+    Without a spec argument this command will show the names
+    of all projects which have releases on the current index.
+    You can use a spec argument to show files for a particular project or
+    release.  RED files come from an an inherited version which is
+    shadowed by an inheriting index.
     """
     parser.add_argument("-f", "--failures", action="store_true",
         dest="failures",
         help="show test setup/failure logs")
+
+    parser.add_argument("--all", action="store_true",
+        help="show all versions instead of just the newest")
+
     parser.add_argument("spec", nargs="?",
-        help="show only info for a project/version/release file.  "
-             "Example specs: 'pytest' or 'pytest-2.3.5' or "
-             "'pytest-2.3.5.tar.gz'")
+        help="show info for a project or a specific release. "
+             "Example specs: 'pytest' or 'pytest-2.3.5'")
 
 @subcommand("devpi.list_remove:main_remove")
 def remove(parser):
